web/css/app/lily.css
/* ... */
.choices-container {
	display: block;
  background: #fff;
  border: solid 1px #888888;
  margin-top: 0px;
  padding: 0;
  border-radius: 10px;
}

.lily-msg-redirection {
	display: block;
	background: #fff;
	border: solid 1px #888888;
  margin-top: 0px;
  padding: 0;
  width: 100%;
  max-width: 100%;
}

.lily-redirection-item {
	display: block;
	border-bottom: solid 1px #888888;
	width: 100%;
	-webkit-transition: all 0.3s;
  -moz-transition: all 0.3s;
  transition: all 0.3s;
	background: transparent;
	position: relative;
	cursor: pointer;
}

.lily-redirection-item .lily-icon-mail,
.lily-redirection-item .lily-icon-phone,
.lily-redirection-item .lily-icon-conversation,
.lily-redirection-item .lily-icon-cross {
  display: inline-block;
  margin-right: 8px;
}

.lily-redirection-item .lily-icon-mail:before,
.lily-redirection-item .lily-icon-phone:before,
.lily-redirection-item .lily-icon-conversation:before,
.lily-redirection-item .lily-icon-cross:before {
  position: relative;
  line-height: 1;
  top: 2px;
}

.lily-redirection-item:first-child {
	border-radius: 10px 10px 0 0;
}

.lily-redirection-item:last-child {
  border-radius: 0 0 10px 10px;
  border-bottom: none;
}

.lily-redirection-item:hover,
.lily-redirection-item.lily-redirection-none:active  {
  background: rgba(169, 8, 19, 0.08);
}

.lily-redirection-item:active,
.lily-redirection-item.lily-redirection-none:active  {
  background: rgba(169, 8, 19, 0.2);
}
.lily-redirection-item:active a ,
.lily-redirection-item.lily-redirection-none:active {
	padding-left: 15px;
}

.lily-redirection-item .lily-icon-arrow-right {
  position: absolute;
  right: 11px;
  top: 50%;
  bottom: 0;
  margin-top: -9px;
}

.lily-msg-redirection ul .lily-redirection-item:last-child {
	border-bottom: none;
}

.lily-redirection-item a,
.lily-redirection-item.lily-redirection-none {
	text-decoration: none;
  padding: 5px 30px 7px 8px;
  display: inline-block;
  width: 100%;
  -webkit-transition: all 0.15s cubic-bezier(0.16, 0.74, 0.57, 1.29);
  -moz-transition: all 0.15s cubic-bezier(0.16, 0.74, 0.57, 1.29);
  transition: all 0.15s cubic-bezier(0.16, 0.74, 0.57, 1.29);
}

#lily-msg-avatar a {
	text-decoration: underline;
}

.lily-box-messages .lily-msg-user p,
.lily-box-messages .lily-msg-avatar p,
.lily-box-messages .lily-msg-redirection p,
#chat-box-messages .lily-msg-chat-operator p,
#chat-box-messages .lily-msg-chat-visitor p {
	word-wrap: break-word;
	text-overflow: ellipsis;
}

.lily-msg-user,
.lily-msg-chat-visitor {
	text-align: right;
}

.lily-msg-user .msg-wrapper,
.lily-msg-chat-visitor .msg-wrapper{
	float: none;
	display: inline-block;
}

.lily-box-messages .lily-msg-redirection:before{
	/*content: "";*/
	position: absolute;
	bottom: -10px;
	left: 10px;
	border-width: 10px 10px 0 0px;
	border-left: 0px solid transparent;
	border-right: 10px solid transparent;
	width: 0;
	height: 0;
}

.lily-box-messages .lily-msg-redirection:after{
	/*content: "";*/
	position: absolute;
	bottom: -8px;
	left: 11px;
	border-left: 0px solid transparent;
	border-right: 10px solid transparent;
	width: 0;
	height: 0;
}

.lily-msg-avatar .msg-wrapper{
	float: none;
	display: inline-block;
	margin-left: 0;
}

.lily-msg {
  margin-bottom: 13px;
  position: relative;
  -webkit-user-select: initial;
}

/*.lily-box-messages .lily-msg:last-child {
	margin-bottom: 126px;
}
.chat-messages .lily-msg:last-child {
	margin-bottom: 52px;
}*/

.lily-box-messages:after {
	content: '';
	position: relative;
	display: block;
	height: 75px;
	width: 100%;
}

/* Messages of a different type following each other have a
   larger margin in between */
.lily-msg-user + .lily-msg-avatar,
.lily-msg-chat-operator + .lily-msg-chat-visitor ,
.lily-msg-chat-visitor + .lily-msg-chat-operator {
  margin-bottom: 13px;
}
.lily-msg-user + .lily-msg-user ,
.lily-msg-avatar + .lily-msg-avatar,
.lily-msg-chat-operator:not(.lily-msg-chat-wait) + .lily-msg-chat-operator,
.lily-msg-chat-visitor + .lily-msg-chat-visitor {
  margin-top: -11px;
}
/* End logic for spacing between messages */

.lily-msg-reporting li.lily-precision-list:nth-child(2){
	margin-top: 5px;
}

.lily-precision-list {
	display: inline-block;
	padding: 6px;
	margin-right: 11px;
	margin-top: 10px;
	border-radius: 3px;
}

.icon-thumb-down{
	margin-left: 3px;
}

.lily-box-messages .lily-notation-wrapper{
	margin-bottom: 13px;
  padding: 0;
}

#lily-chat-notation-wrapper {
	position: relative;
	z-index: 4;
	background: rgba(255, 255, 255, 1);
	width: 100%;
	text-align: right;
	margin-right: 15px;
	height: 40px;
	box-shadow: 0px 2px 6px 0px rgba(155, 155, 155, 0.38);
}

#lily-chat-notation-wrapper p {
	display: inline-block;
	color: #373737;
	font-size: 11px;
}

.lily-chat-notation{
	display: inline-block;
	cursor: pointer;
	font-style: normal;
	user-select: none;
	-webkit-user-select: none;
	-webkit-user-drag: none;
	margin-top: 10px;
	margin-left: 11px;
}

.lily-msg-chat-notation .lily-chat-notation:first-child {
  margin-left: 0;
}

.lily-icon-thumb-up,
.lily-icon-thumb-down {
  color: #9B9B9B;
}

.lily-icon-thumb-up.active,
.lily-icon-thumb-down.active {
	color: #333333;
}

.lily-notation-list{
	display: inline-block;
	cursor: pointer;
	list-style: none;
	padding-left: 0;
	padding: 7px 7px;
	font-style: normal;
	user-select: none;
	-webkit-user-select: none;
	-webkit-user-drag: none;
	margin-top: 0px;
	margin-left: 5px;
	border-radius: 3px;
}

.lily-avatar-bubble {
	left: 15px;
	bottom: -8px;
	width: 0;
	height: 0;
	border-left: 0px solid transparent;
	border-right: 10px solid transparent;
	position: absolute;
}

.lily-reporting-bubble {
	background-image: url(../../images/api/bubble-arrow-reporting.png);
	background-repeat: no-repeat;
	background-size: auto;
	background-position: 0 0;
	height: 10px;
	left: 15px;
	bottom: -10px;
	width: 10px;
	position: absolute;
}

.lily-loading {
	text-align: center;
	width: 50px;
}
/* ... */

